--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </a>
                 </div>
             </div>
-            <img class="intro__container--avatar" src="/dist/img/avatar.png" alt="avatar picture">
+            <img class="intro__container--avatar" src="./dist/img/avatar.png" alt="avatar picture">
         </section>
         <!-- END INTRO -->
     </header>
