--- a/index.html
+++ b/index.html
@@ -271,36 +271,36 @@
                         <a class="contacts__item--link"
                             href="https://drive.google.com/file/d/1Bpl6qxiSlnFoAepUriFwgjORkJW6LOCW/view?usp=sharing"
                             target="_blank">
-                            <img class="contacts__item--pic" src="./dist/img/resume.png" alt="resume icon">
+                            <img class="contacts__item--pic" src="./dist/img/icons/resume.png" alt="resume icon">
                             Check my CV here
                         </a>
                     </li>
                     <li class="contacts__list--item contacts__item">
                         <a class="contacts__item--link" href="mailto: kiparisborismoris@gmail.com"> <img
-                                class="contacts__item--pic" src="./dist/img/email.png" alt="email icon">
+                                class="contacts__item--pic" src="./dist/img/icons/email.png" alt="email icon">
                             kiparisborismoris@gmail.com</a>
                     </li>
                     <li class="contacts__list--item contacts__item">
                         <a class="contacts__item--link" href="tel: 380953999495"> <img class="contacts__item--pic"
-                                src="./dist/img/phone.png" alt="phone icon">
+                                src="./dist/img/icons/phone.png" alt="phone icon">
                             +(38)095-399-94-95</a>
                     </li>
 
                     <!-- previous links -->
                     <li class="contacts__list--item contacts__item">
                         <a class="contacts__item--link" href="https://www.linkedin.com/in/anastasiia-mylenko-990450195/"
-                            target="_blank"> <img class="contacts__item--pic" src="./dist/img/linkedin.png"
+                            target="_blank"> <img class="contacts__item--pic" src="./dist/img/icons/linkedin.png"
                                 alt="linkedin icon">
                             Write me on Linkedin </a>
                     </li>
                     <li class="contacts__list--item contacts__item">
-                        <a class="contacts__item--link" href="https://t.me/kiparisboris" target="_blank"> <img
-                                class="contacts__item--pic" src="./dist/img/telegram.png" alt="telegram icon">
+                        <a class="contacts__item--link" href="https://t.me/kiparisboris" target="_blank">
+                            <img class="contacts__item--pic" src="./dist/img/icons/telegram.png" alt="telegram icon">
                             Contact me via telegram </a>
                     </li>
                     <li class="contacts__list--item contacts__item">
                         <a class="contacts__item--link" href="https://github.com/Miss-Kiparis" target="_blank">
-                            <img class="contacts__item--pic" src="./dist/img/github.png" alt="github icon">
+                            <img class="contacts__item--pic" src="./dist/img/icons/github.png" alt="github icon">
                             Check my Github
                         </a>
                     </li>
