--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         src="https://img.shields.io/badge/SASS-hotpink.svg?style=for-the-badge&logo=SASS&logoColor=white"
                         alt="tech stack sass picture " class="stack__list--item list__item--pic"></li>
                 <li class="stack__list--item list__item"><img
-                        src="https://img.shields.io/badge/tailwind-hotpink.svg?style=for-the-badge&logo=SASS&logoColor=white"
+                        src="https://img.shields.io/badge/tailwind-%23026AA7.svg?style=for-the-badge&logo=Tailwindcss&logoColor=white"
                         alt="tech stack tailwind picture " class="stack__list--item list__item--pic"></li>
                 <li class="stack__list--item list__item"><img
                         src="https://img.shields.io/badge/GULP-%23CF4647.svg?style=for-the-badge&logo=gulp&logoColor=white"
