--- a/index.html
+++ b/index.html
@@ -204,6 +204,66 @@
                             alt="Coffee Shop webpage picture">
 
                     </li>
+                    <li class="projects__list--item project__item project__item1">
+                        <div class="project__item--descr project__description">
+                            <h3 class="project__description--title">ColorScape</h3>
+                            <p class="project__description--text"> A simple color picker extension for easy and fast
+                                usage. With a
+                                simple click on the hex code, you can copy your selected color. Plus, if you decide to
+                                start over, you can easily delete all your picked colors by clicking the "Clear All"
+                                button. It's designed to simplify your color selection process and make it more
+                                convenient for your design needs.
+                            </p>
+                            <p> Please note: this is a Google Chrome extension. This means it would not work on other
+                                browsers.</p>
+                            <div class=" project__description--stack__container stack__container">
+                                <p class="stack__container--item">Vanilla JS</p>
+                                <p class="stack__container--item">HTML+CSS</p>
+                            </div>
+                            <div class="project__description--links__container links__container">
+                                <a href="https://github.com/Miss-Kiparis/Color-Picker-Extension" target="_blank"
+                                    class="links__container--item code__item">Code
+                                </a>
+                                <a href="https://chrome.google.com/webstore/detail/colorscape/ghlgaejkolmmgfknlchphhlkpkfmfdmo"
+                                    target="_blank" class="links__container--item demo__item">Download
+                                </a>
+
+                            </div>
+                        </div>
+                        <img class="project__item--pic" src="./dist/img/projects_pics/colorscape.png"
+                            alt="Coffee Shop webpage picture">
+
+                    </li>
+                    <li class="projects__list--item project__item even project__item2">
+                        <div class="project__item--descr project__description">
+                            <h3 class="project__description--title">Voodoo Page</h3>
+                            <p class="project__description--text"> A simple webpage with Shopify API & TailwindCSS
+                                connected.
+                                Not adaptive yet - but will change it soon.
+                                By clicking on "Add to cart" button customer can add the product to the cart. The
+                                shopping cart drawer will show up (it also appears by clicking on the 'Cart Icon').
+                                The price is calculated and the number of products can be decreased/increased.
+                                The Custom Web Component is added above the list of products. By clicking on the arrow -
+                                it will show the hidden information.
+                            </p>
+                            <div class=" project__description--stack__container stack__container">
+                                <p class="stack__container--item">Vanilla JS</p>
+                                <p class="stack__container--item">TailwindCSS</p>
+                            </div>
+                            <div class="project__description--links__container links__container">
+                                <a href="https://github.com/Miss-Kiparis/TailwindCSS-Page" target="_blank"
+                                    class="links__container--item code__item">Code
+                                </a>
+                                <a href="https://voodoo-page.onrender.com/" target="_blank"
+                                    class="links__container--item demo__item">Live Demo
+                                </a>
+
+                            </div>
+                        </div>
+                        <img class="project__item--pic" src="./dist/img/projects_pics/Voodoo.png"
+                            alt="Coffee Shop webpage picture">
+
+                    </li>
                     <li class="projects__list--item project__item project__item3">
                         <img class="project__item--pic" src="./dist/img/projects_pics/Forkio.png"
                             alt="A business webpage picture">
