picture tag edit

--- a/index.html
+++ b/index.html
@@ -121,12 +121,11 @@
 
             <!-- About Me article -->
             <article class="stack__wrapper--about about__wrapper" id="About">
-                <picture class="about__wrapper-- picture__container picture__container">
-                    <source srcset="./dist/img/about section/comp250.jpg" media="(max-width: 550px)">
-                    <source srcset="./dist/img/about section/comp350.jpg" media="(max-width: 768px)">
-                    <source srcset="./dist/img/about section/comp.jpg" media="(min-width: 769px)">
-                    <img class="picture__container--pic" src="./dist/img/about section/comp.jpg"
-                        alt="about me section picture">
+                <picture class="about__wrapper--picture__container picture__container">
+                    <source srcset="./dist/img/about/comp250.jpg" media="(max-width: 550px)">
+                    <source srcset="./dist/img/about/comp350.jpg" media="(max-width: 768px)">
+                    <!-- <source srcset="./dist/img/about section/comp.jpg" media="(min-width: 769px)"> -->
+                    <img class="picture__container--pic" src="./dist/img/about/comp.jpg" alt="about me section picture">
                 </picture>
                 <div class="about__wrapper--article about__article">
                     <h2 class="about__article--title">About me</h2>
